[gd_scene load_steps=3 format=3 uid="uid://cwdtijg713j6n"]

[ext_resource type="Script" uid="uid://vurxkpw0phey" path="res://scripts/card.gd" id="1_e68ej"]
[ext_resource type="Texture2D" uid="uid://c5wcgt1syqw0g" path="res://assets/Card Border.png" id="2_12e7e"]

[node name="Card" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_e68ej")

[node name="CardBorder" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_12e7e")

[node name="CardArt" type="Sprite2D" parent="."]
position = Vector2(0, 5)

[node name="NameLabel" type="Label" parent="."]
offset_left = 5.0
offset_top = 70.0
offset_right = 95.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 10

[node name="CostLabel" type="Label" parent="."]
offset_left = 40.0
offset_top = 5.0
offset_right = 55.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 10

[node name="DescriptionLabel" type="Label" parent="."]
offset_left = 5.0
offset_top = 85.0
offset_right = 95.0
offset_bottom = 120.0

[node name="CardButton" type="Button" parent="."]
offset_right = 52.0
offset_bottom = 64.0
scale = Vector2(2, 2)
